--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -2,3 +2,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.map{
+  position: absolute !important;;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
