--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -11,4 +11,12 @@ body {
   bottom: 0;
   width: 100%;
   height: 100%;
+  z-index: 5;
+}
+
+.addButton{
+  position: absolute !important;;
+  top: 50px;
+  left: 10px;
+  z-index: 10;
 }
