stop timeline, go to first position

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -15,7 +15,8 @@ body {
 }
 
 .addButton,
-.timeline {
+.timeline,
+.timelineStop {
   position: absolute !important;;
   top: 50px;
   left: 10px;
@@ -24,4 +25,7 @@ body {
 
 .timeline {
   top: 70px
+}
+.timelineStop {
+  top: 90px;
 }
