--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -29,3 +29,28 @@ body {
 .timelineStop {
   top: 90px;
 }
+.range_container {
+    position: absolute;
+    bottom: 30px;
+    background: rgba(211,211,211,0.6);
+    height: 30px;
+    width: 90%;
+    z-index: 6;
+    margin: 0 45px;
+    display: flex;
+    align-items: center;
+  .timeline_range {
+    width: 100%;
+    background: lightsalmon;
+    height: 3px;
+    cursor: pointer;
+    .handle {
+      background: salmon;
+      width: 5px;
+      height: 5px;
+      display: block;
+      position: relative;
+      top: -1px;
+    }
+  }
+}
