move to position on time

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,7 +4,7 @@ body {
 }
 
 .map {
-  position: absolute !important;;
+  position: absolute !important;
   top: 0;
   left: 0;
   right: 0;
@@ -17,7 +17,7 @@ body {
 .addButton,
 .timeline,
 .timelineStop {
-  position: absolute !important;;
+  position: absolute !important;
   top: 50px;
   left: 10px;
   z-index: 10;
@@ -39,6 +39,8 @@ body {
     margin: 0 45px;
     display: flex;
     align-items: center;
+    padding: 0 15px;
+    box-sizing: border-box;
   .timeline_range {
     width: 100%;
     background: lightsalmon;
