--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -42,5 +42,127 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
 /*END RESET*/
+
+body{
+	color: #fff;
+	font-family: helvetica, arial, sans-serif;
+	font-size: 12px;
+	font-weight: 100;
+}
+header {
+	height: 120px;
+	background-color: rgb(36,62,118);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 10%;
+}
+header a {
+	display: flex;
+	align-items: center;
+	color: currentColor;
+	text-decoration: none;
+	text-transform: capitalize;
+	font-size: 15px;
+}
+header img {
+	height: 60px;
+	display: inline;
+	margin: 0 10px 0 0;
+}
+header nav {
+	width: 50%;
+    display: flex;
+    text-transform: capitalize;
+    font-weight: normal;
+    justify-content: space-between;
+    font-size: 16px;
+    line-height: 30px;
+}
+header nav a {
+	text-decoration: none;
+	color: white;
+	cursor: pointer;
+	font-size: 16px;
+}
+header .separator {
+    height: 30px;
+    border-left: 1px solid white;
+}
+header .selected {
+	border-bottom: 2px solid white;
+}
+section {
+	background-color: rgba(46,77,133,0.8);
+	height: calc(100% - 120px);;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+h1 {
+	font-weight: bold;
+	font-size: 70px;
+}
+form {
+	display: flex;
+	flex-direction: column;
+	width: 450px;
+}
+label {
+    text-transform: uppercase;
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+    margin: 15px 0 0;
+}
+input, textarea {
+	height: 30px;
+	padding: 0 6px;
+	border: 0;
+}
+textarea {
+	padding: 6px;
+}
+input:required {
+	box-shadow: inset -3px 0px 0px rgba(200, 0, 0, 0.85);
+}
+input[type='submit'] {
+	background-color: rgb(140,187,198);
+    color: #fff;
+    font-size: 14px;
+    font-weight: 100;
+    width: 70%;
+    margin: 40px auto;
+    height: 60px;
+    cursor: pointer;
+}
+.select_container {
+	position: relative;
+}
+.select_container select {
+	cursor: pointer;
+    background: #fff;
+    width: 100%;
+    padding: 6px;
+    color: #cecece;
+    font-size: 12px;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    height: 34px;
+    -webkit-appearance: none;
+}
+ .select_container:after {
+ 	width: 15px;
+    position: absolute;
+    content: '';
+    height: 15px;
+    background: transparent;
+    border-left: lightgrey 1px solid;
+    border-bottom: lightgrey 1px solid;
+    transform: rotate(-45deg);
+    right: 15px;
+    top: 5px;
+ }
