--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -56,6 +56,7 @@ body{
 	font-family: 'roboto', helvetica, arial, sans-serif;
 	font-size: 12px;
 	font-weight: 100;
+	height: 100%;
 }
 header {
 	height: 120px;
@@ -102,7 +103,7 @@ header .selected {
 }
 section {
 	background-color: rgba(23,64,132,0.8);
-	height: calc(100% - 120px);;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -114,9 +115,9 @@ section.pwd {
 h1 {
 	font-weight: bold;
 	font-size: 70px;
-}
-section.pwd h1 {
-	margin: 0 0 60px 0;
+	margin: 60px 0;
+	text-align: center;
+
 }
 form {
 	display: flex;
@@ -134,13 +135,20 @@ input, textarea {
 	height: 30px;
 	padding: 0 6px;
 	border: 0;
+	font-size: 11px;
 }
 textarea {
 	padding: 6px;
 	height: 100px;
 }
 input:required {
-	box-shadow: inset -3px 0px 0px rgba(200, 0, 0, 0.85);
+	box-shadow: inset -6px 0px 0px #ef4323;
+}
+.tos span input:required {
+	box-shadow: 0px 0px 0px transparent;
+}
+.tos span span {
+	border-bottom: 2px solid #ef4323;
 }
 input[type='submit'] {
 	background-color: rgb(140,187,198);
@@ -152,21 +160,25 @@ input[type='submit'] {
     height: 60px;
     cursor: pointer;
 }
+select::-ms-expand {
+    display: none;
+}
 .select_container {
 	position: relative;
 }
 .select_container select {
+	-moz-appearance:none;
+	-webkit-appearance: none;
 	cursor: pointer;
     background: #fff;
     width: 100%;
     padding: 6px;
-    color: #a7a7a7;
-    font-size: 10px;
+    color: #a9a9a9;
+    font-size: 11px;
     line-height: 1;
     border: 0;
     border-radius: 0;
     height: 30px;
-    -webkit-appearance: none;
 }
  .select_container:after {
  	width: 15px;
@@ -181,16 +193,23 @@ input[type='submit'] {
     top: 5px;
  }
  section p {
- 	line-height: 50px;
+	line-height: 30px;
     font-size: 20px;
     text-align: center;
     letter-spacing: 0.7px;
+    margin: 20px 0;
  }
  .cancel {
- 	margin: 0 auto;
+ 	width: 100%;
+ 	text-align: center;
  	text-decoration: none;
  	color: #fff;
+ 	font-size: 15px;
  }
+.log span {
+	display: flex;
+    justify-content: space-around;
+}
 hr {
 	width: 100%;
 	margin: 40px 0;
@@ -236,18 +255,26 @@ section.reg form{
 	width: 100%;
 }
 .tos {
-	text-align: center;
+	display: flex;
     margin: 40px 0 0 0;
+    justify-content: space-around;
+    width: 98%;
 }
 .tos span {
-	    width: 30%;
     display: inline-block;
+    font-size: 15px;
 }
 .tos input:required {
 	height: 12px;
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    position: relative;
+    top: -1px;
 }
 .bg {
 	background-size: cover;
+	background-attachment: fixed;
+	background-position: 50%;
 }
 .bg.reg {
 	background-image: url('../img/ship.png');
@@ -267,4 +294,97 @@ section.reg form{
 	background-image: url('../img/man.png');
 }
 
-
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) 
+and (orientation : portrait) {
+	header {
+		padding: 0 4%;
+	}
+	header nav {
+		width: 55%;
+	}
+	header a {
+		font-size: 26px !important;
+	}
+	body {
+		font-size: 22px;
+	}
+	section {
+		justify-content: flex-start;
+		padding: 10% 0 0!important;
+	}
+	select {
+		height: 60px !important;
+		font-size: 23px !important;
+	}
+	h1 {
+		margin: 0 0 60px !important;
+	}
+	form {
+		width: 80% !important;
+	}
+	label {
+		font-size: 25px !important;
+		margin: 45px 0 0 !important;
+	}
+	input {
+		-webkit-appearance: none;
+		height: 60px;
+		padding: 0 6px;
+		border: 0;
+		font-size: 23px;
+		border-radius: 0;
+	}
+	input[type="submit"] {
+		width: 98%;
+	    font-size: 23px;
+	    position: relative;
+	    left: -1%;
+	}
+	.tos span input {
+		-webkit-appearance: checkbox;
+	}
+	.select_container:after {
+		top: 20px;
+	}
+	.tos input:required {
+		height: 12px;
+	    transform: scale(2.5);
+	    -webkit-transform: scale(2.5);
+	    position: relative;
+	    top: -1px;
+	}
+	.tos span {
+		font-size: 23px;
+	}
+	.pwd p {
+	    font-size: 34px;
+	    line-height: 60px;
+	}
+	.cancel {
+		font-size: 23px;
+	}
+}
+@-moz-document url-prefix() { 
+  select {
+     padding: 2px !important;
+     color: #767676 !important;
+  }
+}
+@supports (-ms-accelerator:true) {
+  input:required {
+  	border: 1px solid transparent;
+  }
+  select {
+     color: #767676 !important;
+  }
+}
+@media all and (-ms-high-contrast:none) {
+  input:required {
+  	border: 1px solid transparent;
+  }
+  select {
+     color: #767676 !important;
+  }
+}
