--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -133,12 +133,15 @@ label {
     height: 30px;
     line-height: 30px;
     margin: 15px 0 0;
+    letter-spacing: 1.5px;
+    font-family: helvetica, arial, sans-serif;
 }
 input, textarea {
 	height: 30px;
 	padding: 0 6px;
 	border: 0;
 	font-size: 11px;
+	font-family: helvetica, arial, sans-serif;
 }
 textarea {
 	padding: 6px;
@@ -162,6 +165,7 @@ input[type='submit'] {
     margin: 40px auto;
     height: 60px;
     cursor: pointer;
+    letter-spacing: 1.5px;
 }
 select::-ms-expand {
     display: none;
@@ -364,8 +368,9 @@ and (max-device-width : 736px) {
 		font-size: 23px;
 	}
 	.pwd p {
-	    font-size: 34px;
-	    line-height: 60px;
+	    font-size: 35px;
+	    line-height: 40px;
+	    width: 80%;
 	}
 	.cancel {
 		font-size: 23px;
