--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -103,7 +103,7 @@ header .selected {
 }
 section {
 	background-color: rgba(23,64,132,0.8);
-	height: 100%;
+	height: calc(100% + 120px);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -123,6 +123,7 @@ form {
 	display: flex;
 	flex-direction: column;
 	width: 450px;
+	height: 100%;
 }
 .reg form {
 	display: block;
@@ -136,7 +137,7 @@ label {
     margin: 15px 0 0;
     letter-spacing: 1.5px;
     font-family: helvetica, arial, sans-serif;
-    label
+
 }
 input, textarea {
 	height: 30px;
@@ -144,6 +145,7 @@ input, textarea {
 	border: 0;
 	font-size: 11px;
 	font-family: helvetica, arial, sans-serif;
+	flex-shrink: 0;
 }
 textarea {
 	padding: 6px;
