--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -287,6 +287,7 @@ section.reg form{
 	background-size: cover;
 	background-attachment: fixed;
 	background-position: 50%;
+	background-repeat: no-repeat;
 }
 .bg.reg {
 	background-image: url('../img/ship.png');
