add auth and canvas tile

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -23,6 +23,13 @@ body {
   z-index: 10;
 }
 
+.loginButton, .loggedUser{
+  position: absolute !important;
+  top: 50px;
+  right: 10px;
+  z-index: 10;
+}
+
 .timeline {
   top: 70px
 }
