update styles and content

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -5,6 +5,7 @@
 @import 'text.scss';
 @import 'layaout/homepage.scss';
 @import 'components/c_button.scss';
+@import 'components/c_input_button.scss';
 body {
   margin: 0;
   padding: 0;
