Fix typo in folder name

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -3,7 +3,7 @@
 @import 'slick.scss';
 @import 'colors.scss';
 @import 'text.scss';
-@import 'layaout/homepage.scss';
+@import 'layout/homepage.scss';
 @import 'components/c_button.scss';
 @import 'components/c_input_button.scss';
 
