Auto CS fixes and import optimization

--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -6,7 +6,7 @@ $blueprimary: #8abbc7;
 $bluesecondary: #294480;
 $bluedark: #18306d;
 $white: #FFF;
-$white-two: rgba(255,255,255,0.9);
+$white-two: rgba(255, 255, 255, 0.9);
 $black: #111;
 $greyish-brown: #4a4a4a;
 $greysecondary: #e8f4f9;
