--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -45,6 +45,7 @@ body {
   right: 10px;
   left: inherit;
 }
+
 .timeline {
   top: 70px;
 }
@@ -55,7 +56,7 @@ body {
 
 .date_inputs {
   top: 120px;
-  background-color: rgba(255,255,255,0.8);
+  background-color: rgba(255, 255, 255, 0.8);
   label {
     display: block;
     width: 170px;
