--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -28,10 +28,8 @@ body {
   z-index: 5;
 }
 
-.addButton,
 .timeline,
 .timelineStop,
-.date_inputs,
 .loginButton,
 .loggedUser {
   position: absolute !important;
@@ -46,16 +44,27 @@ body {
   left: inherit;
 }
 
+.time_controls {
+  position: absolute !important;
+  bottom: 245px;
+  button {
+    width: 170px;
+  }
+}
+
 .timeline {
   top: 70px;
 }
 
 .timelineStop {
-  top: 90px;
+  top: 93px;
 }
 
 .date_inputs {
-  top: 120px;
+  position: absolute !important;
+  bottom: 30px;
+  left: 10px;
+  z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
   label {
     display: block;
@@ -67,9 +76,10 @@ body {
 .range_container {
   position: absolute;
   bottom: 30px;
+  left: 215px;
   background: rgba(211, 211, 211, 0.6);
   height: 30px;
-  width: 90%;
+  width: 75%;
   z-index: 6;
   margin: 0 45px;
   display: flex;
@@ -93,8 +103,8 @@ body {
   .tooltip {
     background-color: $color9;
     font-family: sans-serif;
-    font-size: 11px;
-    width: 140px;
+    font-size: 14px;
+    width: 75px;
     position: absolute;
     top: 1px;
     transform: translate(-50%, -60%);
