add top header menu on map

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -11,12 +11,17 @@
   margin: 0;
   padding: 0;
 }
-
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  > div, > div > div,  > div > div > div{
+    height: 100%;
+  }
 }
-
 .map {
   position: absolute !important;
   top: 0;
@@ -27,7 +32,6 @@ body {
   height: 100%;
   z-index: 5;
 }
-
 .timeline,
 .timelineStop,
 .loginButton,
@@ -109,4 +113,8 @@ body {
     top: 1px;
     transform: translate(-50%, -60%);
   }
+}
+.map_container {
+  height: calc(100% - 64px);;
+  position: relative;
 }
