--- a/app/styles/components/c_footer.scss
+++ b/app/styles/components/c_footer.scss
@@ -1,5 +1,5 @@
-@import '../text.scss';
-@import '../colors.scss';
+@import '../base/text.scss';
+@import '../base/colors.scss';
 footer {
   font-family: $font-family-primary;
   background-color: $color5;
