display buttons on place, zoom functions

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -122,6 +122,10 @@ body {
     background-color: transparent;
     left: 17px;
   }
+  input {
+    width: 91px;
+    font-size: 11px;
+  }
 }
 
 .range_container {
