display buttons on place, zoom functions

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -15,6 +15,8 @@
 /*Layaout*/
 @import 'layout/l-homepage.scss';
 
+
+$corporateColor: #233e76;
 * {
   margin: 0;
   padding: 0;
@@ -55,40 +57,70 @@ body {
   right: 10px;
   left: inherit;
 }
-
+.zoom_controls {
+  position: absolute;
+  bottom:  135px;
+  left: 10px;
+  z-index: 6;
+  span {
+    background-color: $corporateColor;
+    height: 35px;
+    width: 35px;
+    display: block;
+    border-radius: 50%;
+    color: white;
+    line-height: 35px;
+    text-align: center;
+    border: 1px solid rgba(255,255,255,0.1);
+    cursor: pointer;
+  } 
+}
+.timeline_container {
+  background-color: #021437;
+  height: 130px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  z-index: 6; 
+}
 .time_controls {
   position: absolute !important;
-  bottom: 245px;
   button {
-    width: 170px;
+    width: 50px;
+    left: 200px;
+    height: 40px;
   }
 }
 
 .timeline {
-  top: 70px;
+  top: 18px;
 }
 
 .timelineStop {
-  top: 93px;
+  top: 61px;
 }
 
 .date_inputs {
   position: absolute !important;
-  bottom: 30px;
-  left: 10px;
+  bottom: 50px;
+  left: 5px;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.8);
   label {
-    display: block;
-    width: 170px;
+    display: inline-block;
+    width: 95px;
     text-align: center;
+  }
+  input {
+    width: 91px;
+    font-size: 11px;
   }
 }
 
 .range_container {
   position: absolute;
-  bottom: 30px;
-  left: 215px;
+  bottom: 60px;
+  left: 235px;
   background: rgba(211, 211, 211, 0.6);
   height: 30px;
   width: 75%;
