update styles and content

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -6,12 +6,11 @@
 @import 'base/colors.scss';
 
 /*Components*/
-@import 'components/c-button.scss';
-@import 'components/c-input-button.scss';
+@import 'components/c_button.scss';
+@import 'components/c_input_button.scss';
+@import 'components/c_header.scss';
+@import 'components/c_cover_page.scss';
 
-/*Modules*/
-@import 'modules/m-header-menu.scss';
-@import 'modules/m-cover-page.scss';
 
 /*Layaout*/
 @import 'layout/l-homepage.scss';
