--- a/app/styles/components/c_cover_page.scss
+++ b/app/styles/components/c_cover_page.scss
@@ -1,5 +1,6 @@
-.m_cover_page{
+.c_cover_page{
   background-color: $bluesecondary;
+  padding-top: 100px;
   h1 {
     font-family: $font-family-primary;
     font-size: $font-size-xlarge;
