update styles and content

--- a/app/styles/components/c_footer.scss
+++ b/app/styles/components/c_footer.scss
@@ -1,63 +1,11 @@
-@import '../text.scss';
-@import '../colors.scss';
+@import '../base/text.scss';
+@import '../base/colors.scss';
 footer {
   font-family: $font-family-primary;
   background-color: $color5;
   padding-top: 56px;
   padding-left: 170px;
   padding-right: 170px;
-  .logos_footer {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 54px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    .partner_footer {
-      span {
-        color: $font-color-2;
-        font-size: $font-size-normal;
-        display: block;
-      }
-      img {
-        display: inline-block;
-        width: 130px;
-      }
-    }
-    .sponsor_footer {
-      span {
-        color: $font-color-2;
-        font-size: $font-size-normal;
-      }
-    }
-  }
-  .nav_footer {
-    padding-top: 38px;
-    padding-bottom: 45px;
-    display: flex;
-    justify-content: space-between;
-    ul {
-      list-style: none;
-      -webkit-margin-before: 0;
-      -webkit-margin-after: 0;
-      -webkit-padding-start: 0;
-      li {
-        text-transform: uppercase;
-        color: $font-color-2;
-        font-size: $font-size-small;
-        font-weight: $font-weight-regular;
-        line-height: 2.27;
-      }
-    }
-    .input_footer {
-      span {
-        display: block;
-        text-transform: uppercase;
-        font-size: $font-size-small;
-        font-weight: $font-weight-regular;
-        line-height: 2.27;
-        color: $font-color-2;
-      }
-    }
-  }
   .project_name_footer {
     background-color: $color10;
   }
