--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -10,12 +10,12 @@
 @import 'components/c-input-button.scss';
 @import 'components/c_header.scss';
 @import 'components/c_cover_page.scss';
+@import 'components/c_map.scss';
 
 
 /*Layaout*/
 @import 'layout/l-homepage.scss';
 
-$corporateColor: #233e76;
 * {
   margin: 0;
   padding: 0;
@@ -30,137 +30,4 @@ body {
   > div, > div > div,  > div > div > div{
     height: 100%;
   }
-}
-.map {
-  position: absolute !important;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
-}
-.timeline,
-.timelineStop,
-.loginButton,
-.loggedUser {
-  position: absolute !important;
-  top: 50px;
-  left: 10px;
-  z-index: 10;
-}
-
-.loginButton,
-.loggedUser {
-  right: 10px;
-  left: inherit;
-}
-.zoom_controls {
-  position: absolute;
-  bottom:  135px;
-  left: 10px;
-  z-index: 6;
-  span {
-    background-color: $corporateColor;
-    height: 35px;
-    width: 35px;
-    display: block;
-    border-radius: 50%;
-    color: white;
-    line-height: 35px;
-    text-align: center;
-    border: 1px solid rgba(255,255,255,0.1);
-    cursor: pointer;
-  } 
-}
-.timeline_container {
-  background-color: #021437;
-  height: 130px;
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  z-index: 6; 
-}
-.time_controls {
-  position: absolute !important;
-  button {
-    width: 50px;
-    left: 200px;
-    height: 40px;
-  }
-}
-
-.timeline {
-  top: 18px;
-}
-
-.timelineStop {
-  top: 61px;
-}
-
-.date_inputs {
-  position: absolute !important;
-  bottom: 50px;
-  left: 5px;
-  z-index: 10;
-  background-color: transparent;
-  label {
-    display: inline-block;
-    width: 95px;
-    text-align: center;
-    color: white;
-    font-size: 13px;
-    text-transform: uppercase;
-  }
-  input {
-    width: 111px;
-    font-size: 11px;
-    border: none;
-    position: relative;
-    background-color: transparent;
-    left: 17px;
-  }
-}
-
-.range_container {
-  position: absolute;
-  bottom: 60px;
-  left: 235px;
-  background: rgba(211, 211, 211, 0.6);
-  height: 30px;
-  width: 75%;
-  z-index: 6;
-  margin: 0 45px;
-  display: flex;
-  align-items: center;
-  padding: 0 15px;
-  box-sizing: border-box;
-  .timeline_range {
-    width: 100%;
-    background: $color1;
-    height: 3px;
-    cursor: pointer;
-    .handle {
-      background: $color2;
-      width: 5px;
-      height: 5px;
-      display: block;
-      position: relative;
-      top: -1px;
-    }
-  }
-  .tooltip {
-    background-color: $color9;
-    font-family: sans-serif;
-    font-size: 14px;
-    width: 75px;
-    position: absolute;
-    top: 1px;
-    transform: translate(-50%, -60%);
-  }
-}
-.map_container {
-  height: calc(100% - 100px);;
-  position: relative;
 }
