--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -94,10 +94,10 @@ $corporateColor: #233e76;
 
 .range_container {
   position: absolute;
-  bottom: 60px;
+  bottom: 35px;
   left: 235px;
   background: rgba(211, 211, 211, 0.6);
-  height: 30px;
+  height: 70px;
   width: 75%;
   z-index: 6;
   margin: 0 45px;
@@ -107,16 +107,19 @@ $corporateColor: #233e76;
   box-sizing: border-box;
   .timeline_range {
     width: 100%;
-    background: $color1;
+    background: $color9;
     height: 3px;
     cursor: pointer;
     .handle {
-      background: $color2;
-      width: 5px;
-      height: 5px;
-      display: block;
-      position: relative;
-      top: -1px;
+		background: $color5;
+		width: 5px;
+		height: 70px;
+		display: block;
+		position: relative;
+		top: -35px;
+		opacity: 0.2;
+		left: -1px;
+		z-index: 0;
     }
   }
   .tooltip {
@@ -127,6 +130,29 @@ $corporateColor: #233e76;
     position: absolute;
     top: 1px;
     transform: translate(-50%, -60%);
+    z-index: 1;
+  }
+  .handler_grab {
+  	height: 100%;
+  	width: 2px;
+    background: $color9;
+    cursor: e-resize;
+    position: relative;
+    left: 0;
+  	&.right {
+  		left: 100%;
+  		cursor: w-resize;
+  	}
+  	i {
+  		height: 10px;
+  		width: 10px;
+  		border-radius: 50%;
+  		border: 1px solid $color9;
+  		background-color: $color4;
+  		position: absolute;
+  		top: calc(50% - 5px);
+  		left: -5px;
+  	}
   }
 }
 .map_container {
