update styles [WIP]

--- a/app/styles/components/c_logos_footer.scss
+++ b/app/styles/components/c_logos_footer.scss
@@ -16,9 +16,9 @@
       display: inline-block;
       width: 130px;
       margin-left: 75px;
-      &:first-child {
-        margin-left: 0px;
-      }
+    }
+    .first_partner{
+      margin-left: 0;
     }
   }
   .sponsor_footer {
