--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,14 +4,11 @@
 @import 'base/slick.scss';
 @import 'base/text.scss';
 @import 'base/colors.scss';
-
 /*Components*/
 @import 'components/c-button.scss';
 @import 'components/c-input-button.scss';
 @import 'components/c_header.scss';
 @import 'components/c_cover_page.scss';
-
-
 /*Layaout*/
 @import 'layout/l-homepage.scss';
 
@@ -20,17 +17,20 @@ $corporateColor: #233e76;
   margin: 0;
   padding: 0;
 }
+
 html {
   height: 100%;
 }
+
 body {
   margin: 0;
   padding: 0;
   height: 100%;
-  > div, > div > div,  > div > div > div{
+  > div, > div > div, > div > div > div {
     height: 100%;
   }
 }
+
 .map {
   position: absolute !important;
   top: 0;
@@ -41,6 +41,7 @@ body {
   height: 100%;
   z-index: 5;
 }
+
 .timeline,
 .timelineStop,
 .loginButton,
@@ -56,9 +57,10 @@ body {
   right: 10px;
   left: inherit;
 }
+
 .zoom_controls {
   position: absolute;
-  bottom:  135px;
+  bottom: 135px;
   left: 10px;
   z-index: 6;
   span {
@@ -70,18 +72,20 @@ body {
     color: white;
     line-height: 35px;
     text-align: center;
-    border: 1px solid rgba(255,255,255,0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     cursor: pointer;
-  } 
+  }
 }
+
 .timeline_container {
   background-color: #021437;
   height: 130px;
   position: absolute;
   bottom: 0px;
   width: 100%;
-  z-index: 6; 
+  z-index: 6;
 }
+
 .time_controls {
   position: absolute !important;
   button {
@@ -160,6 +164,7 @@ body {
     transform: translate(-50%, -60%);
   }
 }
+
 .map_container {
   height: calc(100% - 100px);;
   position: relative;
