--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -107,16 +107,16 @@ $corporateColor: #233e76;
   box-sizing: border-box;
   .timeline_range {
     width: 100%;
-    background: $color9;
-    height: 3px;
+    background: transparent;
+    height: 100%;
     cursor: pointer;
     .handle {
 		background: $color5;
-		width: 5px;
+		width: 100%;
 		height: 70px;
 		display: block;
 		position: relative;
-		top: -35px;
+		top: 0;
 		opacity: 0.2;
 		left: -1px;
 		z-index: 0;
@@ -144,14 +144,15 @@ $corporateColor: #233e76;
   		cursor: w-resize;
   	}
   	i {
-  		height: 10px;
-  		width: 10px;
+  		height: 7px;
+  		width: 7px;
   		border-radius: 50%;
-  		border: 1px solid $color9;
+  		border: 3px solid $color9;
   		background-color: $color4;
   		position: absolute;
   		top: calc(50% - 5px);
   		left: -5px;
+  		z-index: 1;
   	}
   }
 }
