--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -112,13 +112,13 @@ $corporateColor: #233e76;
     cursor: pointer;
     .handle {
 		background: $color5;
-		width: 5px;
+		width: 100%;
 		height: 70px;
 		display: block;
 		position: relative;
 		top: -35px;
 		opacity: 0.2;
-		left: -1px;
+		left: 0px;
 		z-index: 0;
     }
   }
@@ -139,6 +139,7 @@ $corporateColor: #233e76;
     cursor: e-resize;
     position: relative;
     left: 0;
+    z-index: 1;
   	&.right {
   		left: 100%;
   		cursor: w-resize;
