Move dependencies to package.json; extract case study slider

--- a/app/styles/components/c_slider_case.scss
+++ b/app/styles/components/c_slider_case.scss
@@ -5,7 +5,8 @@
   display: flex !important;
   justify-content: center;
   align-items: center;
-  padding: 90px 168px 140px;
+  padding-top: 90px;
+  padding-bottom: 140px;
   .c_slider_case_text {
     display: block;
     width: 463px;
