--- a/app/styles/components/c_map.scss
+++ b/app/styles/components/c_map.scss
@@ -10,6 +10,7 @@ $corporateColor: #233e76;
   height: 100%;
   z-index: 5;
 }
+
 .timeline,
 .timelineStop,
 .loginButton,
@@ -25,9 +26,10 @@ $corporateColor: #233e76;
   right: 10px;
   left: inherit;
 }
+
 .zoom_controls {
   position: absolute;
-  bottom:  135px;
+  bottom: 135px;
   left: 10px;
   z-index: 6;
   span {
@@ -39,18 +41,20 @@ $corporateColor: #233e76;
     color: white;
     line-height: 35px;
     text-align: center;
-    border: 1px solid rgba(255,255,255,0.1);
+    border: 1px solid rgba(255, 255, 255, 0.1);
     cursor: pointer;
-  } 
+  }
 }
+
 .timeline_container {
   background-color: #021437;
   height: 130px;
   position: absolute;
   bottom: 0px;
   width: 100%;
-  z-index: 6; 
+  z-index: 6;
 }
+
 .time_controls {
   position: absolute !important;
   button {
@@ -110,15 +114,15 @@ $corporateColor: #233e76;
     background: $color9;
     height: 3px;
     .handle {
-		background: $color5;
-		width: 100%;
-		height: 70px;
-		display: block;
-		position: relative;
-		top: -35px;
-		opacity: 0.2;
-		left: 0px;
-		z-index: 0;
+      background: $color5;
+      width: 100%;
+      height: 70px;
+      display: block;
+      position: relative;
+      top: -35px;
+      opacity: 0.2;
+      left: 0px;
+      z-index: 0;
     }
   }
   .tooltip {
@@ -132,29 +136,30 @@ $corporateColor: #233e76;
     z-index: 1;
   }
   .handler_grab {
-  	height: 100%;
-  	width: 2px;
+    height: 100%;
+    width: 2px;
     background: $color9;
     cursor: e-resize;
     position: relative;
     left: 0;
     z-index: 1;
-  	&.right {
-  		left: 100%;
-  		cursor: w-resize;
-  	}
-  	i {
-  		height: 10px;
-  		width: 10px;
-  		border-radius: 50%;
-  		border: 1px solid $color9;
-  		background-color: $color4;
-  		position: absolute;
-  		top: calc(50% - 5px);
-  		left: -5px;
-  	}
+    &.right {
+      left: 100%;
+      cursor: w-resize;
+    }
+    i {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      border: 1px solid $color9;
+      background-color: $color4;
+      position: absolute;
+      top: calc(50% - 5px);
+      left: -5px;
+    }
   }
 }
+
 .map_container {
   height: calc(100% - 100px);;
   position: relative;
