add accordion and new styles [WIP]

--- a/app/styles/base/colors.scss
+++ b/app/styles/base/colors.scss
@@ -8,6 +8,7 @@ $bluedark: #18306d;
 $white: #FFF;
 $white-two: rgba(255, 255, 255, 0.9);
 $black: #111;
+$blacksecondary: #011137;
 $greyish-brown: #4a4a4a;
 $greysecondary: #e8f4f9;
 
@@ -23,6 +24,7 @@ $color8: $greysecondary;
 $color9: $white;
 $color10: $black;
 $color11: $white-two;
+$color12: $blacksecondary;
 
 /*FONT COLOR*/
 $font-color-1: $color7;
