--- a/app/styles/components/c_layer_panel.scss
+++ b/app/styles/components/c_layer_panel.scss
@@ -20,7 +20,6 @@
     color: $color9;
     text-transform: uppercase;
     padding: 5px 0;
-    border-bottom: 1px solid $color5;
   }
   .react-sanfona {
     color: $color9;
@@ -30,7 +29,7 @@
       }
     }
   }
-  .content_accordion{
+  .content_accordion {
     color: $color9;
     font-size: $font-size-xxsmall;
     font-weight: font-weight-regular;
@@ -38,8 +37,40 @@
     text-transform: uppercase;
     padding-bottom: 30px;
   }
+  input[type="checkbox"] {
+    background-image: -webkit-linear-gradient(hsla(0,0%,0%,.1), hsla(0,0%,100%,.1)), -webkit-linear-gradient(left, #c7c7c7 50%,  #ef4323 50%);
+    background-size: 100% 100%, 200% 100%;
+    background-position: 0 0, 5px 0;
+    border-radius: 25px;
+    cursor: pointer;
+    height: 10px;
+    padding-right: 10px;
+    position: relative;
+    width: 20px;
+    -webkit-appearance: none;
+    -webkit-transition: 0.15s;
+    outline: 0;
+    margin-right: 8px;
+  }
+  input[type="checkbox"]:after {
+    background-color: #eee;
+    background-image: -webkit-linear-gradient(hsla(0,0%,100%,.1), hsla(0,0%,0%,.1));
+    border-radius: 25px;
+    content: '';
+    display: block;
+    height: 10px;
+    left: 0;
+    position: relative;
+    top: 0;
+    width: 10px;
+  }
+  input[type="checkbox"]:checked {
+    background-position: 0 0, 15px 0;
+    padding-left: 10px;
+    padding-right: 0;
+  }
 }
-.title_accordion{
+.title_accordion {
   color: $color9;
   font-weight: $font-weight-bold;
   line-height: 3;
@@ -47,7 +78,7 @@
   font-size: $font-size-xsmall;
   text-transform: uppercase;
   border-bottom: 1px solid $color5;
-  &:last-child{
+  &:last-child {
     border-bottom: 0;
   }
 }
